# ri

./: Cargo.toml  README.md
.github/workflows/: notify.yml
src/: lib.rs  main.rs  test.rs
