[package]
name = "ri"
version = "0.1.0"
edition = "2021"

[dependencies]
dace = { git = "https://github.com/YanghuiWu/dace"}
dace_toolbox = { git = "https://github.com/YanghuiWu/dace_toolbox" }
dace_tests = { git = "https://github.com/YanghuiWu/dace_tests" }
tracing = "0.1.40"
fxhash = "0.2.1"
tracing-subscriber = "0.3.18"
rand = "0.8.5"

